<resources>
    <string name="app_name">Test Application</string>
    <string name="one">One</string>
    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_stop">Stop</string>
    <string name="action_save">Save Time</string>
    <string name="action_show_saved_time">Show Time</string>

    <string name="color">color</string>

    <string name="White">White</string>
    <string name="Red">Red</string>
    <string name="Orange">Orange</string>
    <string name="Yellow">Yellow</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="DarkBlue">DarkBlue</string>
    <string name="Violet">Violet</string>
    <string name="Black">Black</string>

    <string name="stopwatchnotifytitle">STOPWATCH COUNT:</string>
    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="timernotifytitle">TIMER COUNT:</string>
    <string name="timeout">TIME OUT</string>
    <string name="page">Page</string>
    <string name="title">Title</string>

    <string name="android_switcher">android:switcher:</string>
    <string name="android_switcher_fragment">android:switcher:fragment:</string>

    <string name="saved_start_time_stopwatch">savedStartTimeStopwatch</string>
    <string name="saved_is_stopvatch_running">savedIsStopvatchRuning</string>
    <string name="saved_start_time_timer">savedStartTimeTimer</string>
    <string name="saved_is_timer_running">savedIsStopvatchTimer</string>

    <string name="broadcast_action">serviceBackBroadcast</string>

    <string-array name="string_array_settings">
        <item>Background Color</item>
        <item>Font Color</item>
    </string-array>

    <string-array name="string_array_colors">
        <item>White</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>DarkBlue</item>
        <item>Violet</item>
        <item>Black</item>
    </string-array>

    <string-array name="titles_tabs">
        <item>Stopwatch</item>
        <item>Timer</item>
    </string-array>

    <string name="log_app">LOG</string>
    <string name="saved_is_stopwatch_running">savedIsStopwatchRunning</string>
    <string name="current_page">currentPage</string>
    <string name="preferences">preferences</string>

    <string name="stopwatch_time_table">stopwatchTimeTable</string>
    <string name="timer_time_table">timerTimeTable</string>
    <string name="colors_table">colorsTable</string>
    <string name="cutoff_stopwatch_table">cutoffStopwatchTable</string>
    <string name="cutoff_timer_table">cutoffTimerTable</string>
    <string name="background_color">BackgroundColor</string>
    <string name="save_cutoff">saveCutoff</string>

    <string name="time_name_column">time_name_column</string>
    <string name="color_name_column">color_name_column</string>
    <string name="color_value_column">color_value_column</string>
    <string name="cutoff_value_value">cutoff_value_value</string>
    <string name="database_name">timedatabase.db</string>
    <string name="colors_selection">colorsSelection</string>
    <string name="action_color_selection">Color Selection</string>


</resources>
