<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activitys.MainActivity">

    <item
        android:id="@+id/startPauseStopwatchButton"
        android:onClick="onClickStartPause"
        android:orderInCategory="15"
        android:title="@string/action_pause"
        app:showAsAction="always"
        android:icon="@drawable/ic_pause_24dp" />
    <item
        android:id="@+id/resetButton"
        android:onClick="onClickReset"
        android:orderInCategory="25"
        android:title="@string/action_reset"
        app:showAsAction="always"
        android:icon="@drawable/ic_autorenew_24dp" />
    <item
        android:id="@+id/settingsButton"
        android:onClick="onClickSettings"
        android:orderInCategory="75"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_24dp" />
    <item
        android:id="@+id/saveTimeButton"
        android:onClick="onClickSaveTime"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="always"
        android:icon="@drawable/ic_save_24dp" />
    <item
        android:id="@+id/showSavedTimeButton"
        android:onClick="onClickShowSavedTime"
        android:orderInCategory="150"
        android:title="@string/action_show_saved_time"
        app:showAsAction="always"
        android:icon="@drawable/ic_assignment_24dp" />
    </menu>